--- a/app/css/grid.css
+++ b/app/css/grid.css
@@ -5,11 +5,13 @@
   padding-right: .18em;
 	position: relative;
 }
+
 .dragIcon {
 	position: absolute;
 	right: 10px;
 	top: 10px;
 	opacity: 0.2;
+	touch-action: none !important;
 }
 
 .gridItem {
@@ -66,6 +68,7 @@
 
 :global(.react-grid-item) {
   box-shadow: 0 4px 5px 0 rgba(0, 0, 0, .14), 0 1px 10px 0 rgba(0, 0, 0, .12), 0 2px 4px -1px rgba(0, 0, 0, .2);
+	touch-action: auto !important;
 }
 
 :global(.react-draggable-dragging) {
