Added YouTube search
Signed-off-by: Henry Gressmann <mail@explodingcamera.com>

--- a/app/css/dialog.css
+++ b/app/css/dialog.css
@@ -1,3 +1,13 @@
 .dialog section {
   padding-bottom: 0;
 }
+.searchWrapper {
+	display: flex;
+	align-items: center;
+}
+.searchWrapper div {
+  flex-grow: 1;
+}
+.searchDropdown > div > div {
+	padding-top: 0;
+}
