--- a/app/css/global.css
+++ b/app/css/global.css
@@ -6,3 +6,12 @@
 @import "./odometer.css";
 
 @import "./contextMenu.css";
+
+body {
+	overflow-y: hidden;
+}
+
+#app {
+	height: 100vh;
+	overflow-y: auto;
+}
