--- a/app/css/grid.css
+++ b/app/css/grid.css
@@ -10,9 +10,15 @@
 	position: absolute;
 	right: 10px;
 	top: 10px;
-	opacity: 0.2;
+	opacity: 0.4;
+	font-size: 25px;
 	touch-action: none !important;
 }
+
+.dragIcon:active:hover {
+	opacity: 1;
+}
+
 
 .gridItem {
   overflow: hidden;
@@ -86,4 +92,13 @@
 
 :global(.react-contextmenu-wrapper) {
   height: 100%;
+}
+
+:global(.react-grid-item>.react-resizable-handle) {
+	width: 30px;
+	height: 30px;
+	background-size: 80%;
+	padding: 10px 0 0 10px;
+	margin-bottom: 10px;
+	margin-right: 10px;
 }
