--- a/app/css/global.css
+++ b/app/css/global.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css?family=Roboto:400,700');
+@import "https://fonts.googleapis.com/icon?family=Material+Icons";
 
 @import "~socicon/css/socicon.css";
 @import "~react-grid-layout/css/styles.css";
@@ -8,10 +9,15 @@
 @import "./contextMenu.css";
 
 body {
+	user-select: none;
+  margin: 0;
+  padding: 0;
+  background: linear-gradient(to left, #f3f3f3 , #dadada) !important;
 	overflow-y: hidden;
 }
 
 #app {
 	height: 100vh;
 	overflow-y: auto;
+	overflow-x: hidden !important;
 }
